Wrap TagLib file

--- a/Last.fm-Scrubbler-WPF/Views/ScrobbleViews/FileScrobbleView.xaml
+++ b/Last.fm-Scrubbler-WPF/Views/ScrobbleViews/FileScrobbleView.xaml
@@ -54,45 +54,45 @@
               </DataTemplate>
             </GridViewColumn.CellTemplate>
           </GridViewColumn>
-          <GridViewColumn Header="#" local:GridViewSort.PropertyName="LoadedFile.Tag.Track">
+          <GridViewColumn Header="#" local:GridViewSort.PropertyName="TrackNumber">
             <GridViewColumn.CellTemplate>
               <DataTemplate>
-                <Label VerticalAlignment="Center" Content="{Binding LoadedFile.Tag.Track}"/>
+                <Label VerticalAlignment="Center" Content="{Binding TrackNumber}"/>
               </DataTemplate>
             </GridViewColumn.CellTemplate>
           </GridViewColumn>
-          <GridViewColumn Header="Artist" local:GridViewSort.PropertyName="LoadedFile.Tag.FirstPerformer">
+          <GridViewColumn Header="Artist" local:GridViewSort.PropertyName="Artist">
             <GridViewColumn.CellTemplate>
               <DataTemplate>
-                <Label VerticalAlignment="Center" Content="{Binding LoadedFile.Tag.FirstPerformer}"/>
+                <Label VerticalAlignment="Center" Content="{Binding Artist}"/>
               </DataTemplate>
             </GridViewColumn.CellTemplate>
           </GridViewColumn>
-          <GridViewColumn Header="Album" local:GridViewSort.PropertyName="LoadedFile.Tag.Album">
+          <GridViewColumn Header="Album" local:GridViewSort.PropertyName="Album">
             <GridViewColumn.CellTemplate>
               <DataTemplate>
-                <Label VerticalAlignment="Center" Content="{Binding LoadedFile.Tag.Album}"/>
+                <Label VerticalAlignment="Center" Content="{Binding Album}"/>
               </DataTemplate>
             </GridViewColumn.CellTemplate>
           </GridViewColumn>
-          <GridViewColumn Header="Track" local:GridViewSort.PropertyName="LoadedFile.Tag.Title">
+          <GridViewColumn Header="Track" local:GridViewSort.PropertyName="Track">
             <GridViewColumn.CellTemplate>
               <DataTemplate>
-                <Label VerticalAlignment="Center" Content="{Binding LoadedFile.Tag.Title}"/>
+                <Label VerticalAlignment="Center" Content="{Binding Track}"/>
               </DataTemplate>
             </GridViewColumn.CellTemplate>
           </GridViewColumn>
-          <GridViewColumn Header="Album Artist" local:GridViewSort.PropertyName="LoadedFile.Tag.FirstAlbumArtist">
+          <GridViewColumn Header="Album Artist" local:GridViewSort.PropertyName="AlbumArtist">
             <GridViewColumn.CellTemplate>
               <DataTemplate>
-                <Label VerticalAlignment="Center" Content="{Binding LoadedFile.Tag.FirstAlbumArtist}"/>
+                <Label VerticalAlignment="Center" Content="{Binding AlbumArtist}"/>
               </DataTemplate>
             </GridViewColumn.CellTemplate>
           </GridViewColumn>
-          <GridViewColumn Header="Duration" local:GridViewSort.PropertyName="LoadedFile.Properties.Duration">
+          <GridViewColumn Header="Duration" local:GridViewSort.PropertyName="Duration">
             <GridViewColumn.CellTemplate>
               <DataTemplate>
-                <Label VerticalAlignment="Center" Content="{Binding LoadedFile.Properties.Duration}"/>
+                <Label VerticalAlignment="Center" Content="{Binding Duration}"/>
               </DataTemplate>
             </GridViewColumn.CellTemplate>
           </GridViewColumn>
