--- a/Last.fm-Scrubbler-WPF/Views/ExtraFunctions/PasteYourTasteView.xaml
+++ b/Last.fm-Scrubbler-WPF/Views/ExtraFunctions/PasteYourTasteView.xaml
@@ -4,8 +4,6 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:sys="clr-namespace:System;assembly=mscorlib"
-             xmlns:i="clr-namespace:System.Windows.Interactivity;assembly=System.Windows.Interactivity"
-             xmlns:cal="http://www.caliburnproject.org"
              xmlns:xctk="http://schemas.xceed.com/wpf/xaml/toolkit"
              xmlns:lastEnums="clr-namespace:IF.Lastfm.Core.Api.Enums;assembly=IF.Lastfm.Core"
              mc:Ignorable="d"
@@ -56,13 +54,7 @@
 
     <CheckBox Grid.Row="0" Grid.Column="12" Content="Add Profile Link" VerticalAlignment="Center" IsChecked="{Binding AddProfileLink}"/>
 
-    <Button Grid.Row="0" Grid.Column="14" IsEnabled="{Binding CanFetch}" Content="Fetch">
-      <i:Interaction.Triggers>
-        <i:EventTrigger EventName="Click">
-          <cal:ActionMessage MethodName="GetTopArtists"/>
-        </i:EventTrigger>
-      </i:Interaction.Triggers>
-    </Button>
+    <Button x:Name="GetTopArtists" Grid.Row="0" Grid.Column="14" IsEnabled="{Binding CanFetch}" Content="Fetch"/>
 
     <Grid Grid.Row="2" Grid.Column="0" Grid.ColumnSpan="15">
       <Grid.RowDefinitions>
@@ -76,12 +68,7 @@
       </Grid.ColumnDefinitions>
 
       <TextBox Grid.Row="0" Grid.RowSpan="2" Grid.Column="0" IsReadOnly="True" Text="{Binding TasteText, Mode=OneWay}" TextWrapping="Wrap" VerticalScrollBarVisibility="Auto"/>
-      <Button Grid.Row="0" Grid.Column="2" IsEnabled="{Binding CanCopy}">
-        <i:Interaction.Triggers>
-          <i:EventTrigger EventName="Click">
-            <cal:ActionMessage MethodName="CopyTasteText"/>
-          </i:EventTrigger>
-        </i:Interaction.Triggers>
+      <Button x:Name="CopyTasteText" Grid.Row="0" Grid.Column="2" IsEnabled="{Binding CanCopy}">
         <Image Source="..\..\Resources\copy.png"/>
         <Button.ToolTip>
           <ToolTip>Copies the text to the clipboard.</ToolTip>
