More namespace fixes

--- a/Last.fm-Scrubbler-WPF/Views/ScrobbleViews/CacheScrobblerView.xaml
+++ b/Last.fm-Scrubbler-WPF/Views/ScrobbleViews/CacheScrobblerView.xaml
@@ -6,6 +6,7 @@
              xmlns:i="clr-namespace:System.Windows.Interactivity;assembly=System.Windows.Interactivity"
              xmlns:cal="http://www.caliburnproject.org"
              xmlns:views="clr-namespace:Scrubbler.Views"
+             xmlns:subViews="clr-namespace:Scrubbler.Views.SubViews"
              mc:Ignorable="d"
              d:DesignHeight="300" d:DesignWidth="300">
 
@@ -80,7 +81,7 @@
       </ListView.View>
     </ListView>
 
-    <views:ScrobbleButtonControl Grid.Row="4" Grid.Column="0"/>
+    <subViews:ScrobbleButtonControl Grid.Row="4" Grid.Column="0"/>
 
     <CheckBox Grid.Row="4" Grid.Column="2" Content="Auto Scrobble at startup" VerticalAlignment="Center" IsChecked="{Binding AutoScrobble}" Style="{StaticResource EnableControlsStyle}"/>
   </Grid>
