--- a/Last.fm-Scrubbler-WPF/Views/ScrobbleViews/CSVScrobbleView.xaml
+++ b/Last.fm-Scrubbler-WPF/Views/ScrobbleViews/CSVScrobbleView.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl x:Class="Scrubbler.Views.CSVScrobbleView"
+﻿<UserControl x:Class="Scrubbler.Views.ScrobbleViews.CSVScrobbleView"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
@@ -6,8 +6,8 @@
              xmlns:sys="clr-namespace:System;assembly=mscorlib"
              xmlns:xctk="http://schemas.xceed.com/wpf/xaml/toolkit"
              xmlns:local="clr-namespace:Scrubbler.Views"
-             xmlns:viewModels="clr-namespace:Scrubbler.ViewModels"
-             xmlns:scrobbleViews="clr-namespace:Scrubbler.Views.ScrobbleViews"
+             xmlns:viewModels="clr-namespace:Scrubbler.ViewModels.ScrobbleViewModels"
+             xmlns:subViews="clr-namespace:Scrubbler.Views.SubViews"
              mc:Ignorable="d"
              d:DesignHeight="300" d:DesignWidth="500">
 
@@ -50,7 +50,7 @@
     <Button x:Name="ParseCSVFile" Grid.Row="0" Grid.Column="6" Content="Parse" IsEnabled="{Binding CanParse}"/>
     <Button x:Name="OpenCSVParserSettings" Grid.Row="0" Grid.Column="8" Content="Settings"/>
 
-    <local:SelectScrobblesControl Grid.Row="2" Grid.ColumnSpan="9"/>
+    <subViews:SelectScrobblesControl Grid.Row="2" Grid.ColumnSpan="9"/>
 
     <ListView Grid.Row="4" Grid.Column="0" Grid.ColumnSpan="9" ItemsSource="{Binding Scrobbles}" local:GridViewSort.AutoSort="True">
       <ListView.View>
@@ -149,13 +149,13 @@
         </Grid.RowDefinitions>
 
         <Label Grid.Column="0" Grid.Row="0" Content="Finishing time:"/>
-        <scrobbleViews:SelectScrobbleTimeControl Grid.Row="0" Grid.Column="2"/>
+        <subViews:SelectScrobbleTimeControl Grid.Row="0" Grid.Column="2"/>
 
         <Label Grid.Column="0" Grid.Row="2" Content="Default Duration per Song (sec):"/>
         <xctk:IntegerUpDown Grid.Column="2" Grid.Row="2" Minimum="1" Value="{Binding Duration}" Style="{StaticResource EnableControlsStyle}"/>
       </Grid>
 
-      <local:ScrobbleButtonControl Grid.Row="4" Grid.Column="0" Grid.ColumnSpan="7"/>
+      <subViews:ScrobbleButtonControl Grid.Row="4" Grid.Column="0" Grid.ColumnSpan="7"/>
     </Grid>
   </Grid>
 </UserControl>
