--- a/Last.fm-Scrubbler-WPF/Views/ScrobbleViews/DatabaseScrobbleView.xaml
+++ b/Last.fm-Scrubbler-WPF/Views/ScrobbleViews/DatabaseScrobbleView.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl x:Class="Scrubbler.Views.DatabaseScrobbleView"
+﻿<UserControl x:Class="Scrubbler.Views.ScrobbleViews.DatabaseScrobbleView"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
@@ -6,9 +6,9 @@
              xmlns:sys="clr-namespace:System;assembly=mscorlib"
              xmlns:local="clr-namespace:Scrubbler.Views"
              xmlns:xctk="http://schemas.xceed.com/wpf/xaml/toolkit"
-             xmlns:viewModels="clr-namespace:Scrubbler.ViewModels"
+             xmlns:viewModels="clr-namespace:Scrubbler.ViewModels.ScrobbleViewModels"
              xmlns:converters="clr-namespace:Scrubbler.Converters"
-             xmlns:scrobbleViews="clr-namespace:Scrubbler.Views.ScrobbleViews"
+             xmlns:subViews="clr-namespace:Scrubbler.Views.SubViews"
              mc:Ignorable="d"
              d:DesignHeight="300" d:DesignWidth="300">
 
@@ -92,10 +92,10 @@
         <ColumnDefinition Width="Auto"/>
       </Grid.ColumnDefinitions>
 
-      <local:ScrobbleButtonControl Grid.Row="2" Grid.Column="0" Grid.ColumnSpan="7"/>
+      <subViews:ScrobbleButtonControl Grid.Row="2" Grid.Column="0" Grid.ColumnSpan="7"/>
 
       <Label Grid.Column="0" Content="Finishing Time:"/>
-      <scrobbleViews:SelectScrobbleTimeControl Grid.Column="2" Grid.ColumnSpan="3"/>
+      <subViews:SelectScrobbleTimeControl Grid.Column="2" Grid.ColumnSpan="3"/>
 
     </Grid>
   </Grid>
