--- a/Last.fm-Scrubbler-WPF/Views/ScrobbleViews/FileScrobbleView.xaml
+++ b/Last.fm-Scrubbler-WPF/Views/ScrobbleViews/FileScrobbleView.xaml
@@ -1,11 +1,11 @@
-﻿<UserControl x:Class="Scrubbler.Views.FileScrobbleView"
+﻿<UserControl x:Class="Scrubbler.Views.ScrobbleViews.FileScrobbleView"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:cal="http://www.caliburnproject.org"
              xmlns:local="clr-namespace:Scrubbler.Views"
-             xmlns:scrobbleViews="clr-namespace:Scrubbler.Views.ScrobbleViews"
+             xmlns:subViews="clr-namespace:Scrubbler.Views.SubViews"
              mc:Ignorable="d"
              d:DesignHeight="300" d:DesignWidth="325">
 
@@ -40,7 +40,7 @@
 
       <Button x:Name="RemoveFiles" Grid.Row="0" Grid.Column="2" Content="Remove Selected Files" HorizontalAlignment="Left" IsEnabled="{Binding CanRemoveFiles}"/>
 
-      <local:SelectScrobblesControl Grid.Row="0" Grid.Column="4"/>
+      <subViews:SelectScrobblesControl Grid.Row="0" Grid.Column="4"/>
     </Grid>
 
     <ListView Grid.Row="2" Grid.Column="0" Grid.ColumnSpan="4"  VerticalAlignment="Stretch" ItemsSource="{Binding LoadedFiles}"
@@ -100,9 +100,9 @@
       </ListView.View>
     </ListView>
 
-    <local:ScrobbleButtonControl Grid.Row="6" Grid.Column="0" Grid.ColumnSpan="5"/>
+    <subViews:ScrobbleButtonControl Grid.Row="6" Grid.Column="0" Grid.ColumnSpan="5"/>
 
     <Label Grid.Row="4" Grid.Column="0" Content="Finishing Time:"/>
-    <scrobbleViews:SelectScrobbleTimeControl Grid.Row="4" Grid.Column="2" Grid.ColumnSpan="3"/>
+    <subViews:SelectScrobbleTimeControl Grid.Row="4" Grid.Column="2" Grid.ColumnSpan="3"/>
   </Grid>
 </UserControl>
