--- a/Last.fm-Scrubbler-WPF/Views/ScrobbleViews/FriendScrobbleView.xaml
+++ b/Last.fm-Scrubbler-WPF/Views/ScrobbleViews/FriendScrobbleView.xaml
@@ -1,10 +1,11 @@
-﻿<UserControl x:Class="Scrubbler.Views.FriendScrobbleView"
+﻿<UserControl x:Class="Scrubbler.Views.ScrobbleViews.FriendScrobbleView"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:xctk="http://schemas.xceed.com/wpf/xaml/toolkit"
              xmlns:local="clr-namespace:Scrubbler.Views"
+             xmlns:subViews="clr-namespace:Scrubbler.Views.SubViews"
              mc:Ignorable="d"
              d:DesignHeight="300" d:DesignWidth="300">
 
@@ -40,7 +41,7 @@
     <xctk:IntegerUpDown Grid.Row="0" Grid.Column="6" Value="{Binding Amount}" Minimum="1" Maximum="1000"/>
     <Button x:Name="FetchScrobbles" Grid.Row="0" Grid.Column="8" Content="Fetch" IsEnabled="{Binding CanFetch}"/>
 
-    <local:SelectScrobblesControl Grid.Row="2" Grid.ColumnSpan="9"/>
+    <subViews:SelectScrobblesControl Grid.Row="2" Grid.ColumnSpan="9"/>
 
     <ListView Grid.Row="4" Grid.Column="0" Grid.ColumnSpan="9" VerticalAlignment="Stretch" ItemsSource="{Binding FetchedScrobbles}" local:GridViewSort.AutoSort="True">
       <ListView.View>
@@ -97,7 +98,7 @@
       </ListView.View>
     </ListView>
 
-    <local:ScrobbleButtonControl Grid.Row="6" Grid.Column="0" Grid.ColumnSpan="9"/>
+    <subViews:ScrobbleButtonControl Grid.Row="6" Grid.Column="0" Grid.ColumnSpan="9"/>
 
   </Grid>
 </UserControl>
