--- a/Last.fm-Scrubbler-WPF/Views/ScrobbleViews/ManualScrobbleView.xaml
+++ b/Last.fm-Scrubbler-WPF/Views/ScrobbleViews/ManualScrobbleView.xaml
@@ -1,11 +1,10 @@
-﻿<UserControl x:Class="Scrubbler.Views.ManualScrobbleView"
+﻿<UserControl x:Class="Scrubbler.Views.ScrobbleViews.ManualScrobbleView"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:xctk="http://schemas.xceed.com/wpf/xaml/toolkit"
-             xmlns:local="clr-namespace:Scrubbler.Views"
-             xmlns:scrobbleViews="clr-namespace:Scrubbler.Views.ScrobbleViews"
+             xmlns:subViews="clr-namespace:Scrubbler.Views.SubViews"
              mc:Ignorable="d"
              d:DesignHeight="300" d:DesignWidth="300">
 
@@ -49,8 +48,8 @@
     <xctk:TimeSpanUpDown Grid.Row="8" Grid.Column="2" Grid.ColumnSpan="3" Value="{Binding Duration}" Minimum="0" />
 
     <Label Grid.Row="10" Grid.Column="0" Content="Time Played:"/>
-    <scrobbleViews:SelectScrobbleTimeControl Grid.Row="10" Grid.Column="2" Grid.ColumnSpan="3"/>
+    <subViews:SelectScrobbleTimeControl Grid.Row="10" Grid.Column="2" Grid.ColumnSpan="3"/>
 
-    <local:ScrobbleButtonControl Grid.Row="12" Grid.Column="0" Grid.ColumnSpan="5"/>
+    <subViews:ScrobbleButtonControl Grid.Row="12" Grid.Column="0" Grid.ColumnSpan="5"/>
   </Grid>
 </UserControl>
