--- a/Last.fm-Scrubbler-WPF/Views/ScrobbleViews/MediaPlayerDatabaseScrobbleView.xaml
+++ b/Last.fm-Scrubbler-WPF/Views/ScrobbleViews/MediaPlayerDatabaseScrobbleView.xaml
@@ -1,12 +1,13 @@
-﻿<UserControl x:Class="Scrubbler.Views.MediaPlayerDatabaseScrobbleView"
+﻿<UserControl x:Class="Scrubbler.Views.ScrobbleViews.MediaPlayerDatabaseScrobbleView"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:sys="clr-namespace:System;assembly=mscorlib"
              xmlns:local="clr-namespace:Scrubbler.Views"
-             xmlns:viewModels="clr-namespace:Scrubbler.ViewModels"
+             xmlns:viewModels="clr-namespace:Scrubbler.ViewModels.ScrobbleViewModels"
              xmlns:conv="clr-namespace:Scrubbler.Converters"
+             xmlns:subViews="clr-namespace:Scrubbler.Views.SubViews"
              mc:Ignorable="d"
              d:DesignHeight="330" d:DesignWidth="350">
 
@@ -58,7 +59,7 @@
     </ComboBox>
     <Button x:Name="ParseFile" Grid.Row="0" Grid.Column="8" Content="Parse" Style="{StaticResource EnableControlsStyle}"/>
 
-    <local:SelectScrobblesControl Grid.Row="2" Grid.ColumnSpan="9"/>
+    <subViews:SelectScrobblesControl Grid.Row="2" Grid.ColumnSpan="9"/>
 
     <ListView Grid.Row="4" Grid.Column="0" Grid.ColumnSpan="9" ItemsSource="{Binding ParsedScrobbles}" local:GridViewSort.AutoSort="True">
       <ListView.View>
@@ -123,7 +124,6 @@
       </ListView.View>
     </ListView>
 
-    <local:ScrobbleButtonControl Grid.Row="8" Grid.Column="0" Grid.ColumnSpan="10"/>
-
+    <subViews:ScrobbleButtonControl Grid.Row="8" Grid.Column="0" Grid.ColumnSpan="10"/>
   </Grid>
 </UserControl>
