--- a/Last.fm-Scrubbler-WPF/Views/ScrobbleViews/SetlistFMScrobbleView.xaml
+++ b/Last.fm-Scrubbler-WPF/Views/ScrobbleViews/SetlistFMScrobbleView.xaml
@@ -7,7 +7,6 @@
              xmlns:xctk="http://schemas.xceed.com/wpf/xaml/toolkit"
              xmlns:views="clr-namespace:Scrubbler.Views"
              xmlns:subViews="clr-namespace:Scrubbler.Views.SubViews"
-             xmlns:scrobbleViews="clr-namespace:Scrubbler.Views.ScrobbleViews"
              xmlns:scrobbleViewModels="clr-namespace:Scrubbler.ViewModels.ScrobbleViewModels"
              xmlns:converters="clr-namespace:Scrubbler.Converters"
              mc:Ignorable="d"
@@ -107,9 +106,9 @@
       <CheckBox x:Name="CustomAlbumStringCheckBox" Grid.Row="0" Grid.Column="4" Content="Custom" VerticalAlignment="Center" IsChecked="{Binding CustomAlbumString}"/>
 
       <Label Grid.Column="0" Grid.Row="2" Content="Finishing Time:"/>
-      <scrobbleViews:SelectScrobbleTimeControl Grid.Row="2" Grid.Column="2" Grid.ColumnSpan="3"/>
+      <subViews:SelectScrobbleTimeControl Grid.Row="2" Grid.Column="2" Grid.ColumnSpan="3"/>
 
-      <views:ScrobbleButtonControl Grid.Row="4" Grid.Column="0" Grid.ColumnSpan="7"/>
+      <subViews:ScrobbleButtonControl Grid.Row="4" Grid.Column="0" Grid.ColumnSpan="7"/>
     </Grid>
   </Grid>
 </UserControl>
