--- a/Last.fm-Scrubbler-WPF/Views/SubViews/ScrobbleButtonControl.xaml
+++ b/Last.fm-Scrubbler-WPF/Views/SubViews/ScrobbleButtonControl.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl x:Class="Scrubbler.Views.ScrobbleButtonControl"
+﻿<UserControl x:Class="Scrubbler.Views.SubViews.ScrobbleButtonControl"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
