--- a/Last.fm-Scrubbler-WPF/Views/SubViews/SelectScrobblesControl.xaml
+++ b/Last.fm-Scrubbler-WPF/Views/SubViews/SelectScrobblesControl.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl x:Class="Scrubbler.Views.SelectScrobblesControl"
+﻿<UserControl x:Class="Scrubbler.Views.SubViews.SelectScrobblesControl"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
