--- a/Last.fm-Scrubbler-WPF/Views/ScrobbleViews/FileScrobbleView.xaml
+++ b/Last.fm-Scrubbler-WPF/Views/ScrobbleViews/FileScrobbleView.xaml
@@ -7,7 +7,7 @@
              xmlns:local="clr-namespace:Scrubbler.Views"
              xmlns:subViews="clr-namespace:Scrubbler.Views.SubViews"
              mc:Ignorable="d"
-             d:DesignHeight="300" d:DesignWidth="325">
+             d:DesignHeight="300" d:DesignWidth="325" Style="{StaticResource EnableControlsStyle}">
 
   <Grid>
     <Grid.RowDefinitions>
