--- a/Last.fm-Scrubbler-WPF/Views/ScrobbleViews/SpotifyScrobbleView.xaml
+++ b/Last.fm-Scrubbler-WPF/Views/ScrobbleViews/SpotifyScrobbleView.xaml
@@ -5,7 +5,7 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:local="clr-namespace:Scrubbler.Views.ScrobbleViews"
              mc:Ignorable="d"
-             d:DesignHeight="300" d:DesignWidth="300">
+             d:DesignHeight="300" d:DesignWidth="300" Style="{StaticResource EnableControlsStyle}">
 
   <local:MediaPlayerScrobbleControl/>
 </UserControl>
