--- a/Last.fm-Scrubbler-WPF/App.xaml
+++ b/Last.fm-Scrubbler-WPF/App.xaml
@@ -1,12 +1,13 @@
 ﻿<Application x:Class="Scrubbler.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:local="clr-namespace:Scrubbler">
+             xmlns:local="clr-namespace:Scrubbler"
+             ShutdownMode="OnExplicitShutdown">
   <Application.Resources>
     <ResourceDictionary>
       <ResourceDictionary.MergedDictionaries>
         <ResourceDictionary>
-          <local:AppBootstrapper x:Key="bootstrapper" />
+          <local:AppBootstrapper x:Key="bootstrapper"/>
 
           <Style x:Key="EnableControlsStyle" TargetType="FrameworkElement">
             <Style.Triggers>
