Added settings window to configure tray icon settings

--- a/Last.fm-Scrubbler-WPF/Views/MainView.xaml
+++ b/Last.fm-Scrubbler-WPF/Views/MainView.xaml
@@ -33,7 +33,17 @@
         </StackPanel>
       </StatusBarItem>
 
-      <Separator />
+      <Separator/>
+
+      <StatusBarItem>
+        <TextBlock>
+            <Hyperlink>
+              <TextBlock Text="Settings" cal:Message.Attach="[Event MouseDown] = [Action ShowSettings]"/>
+            </Hyperlink>
+          </TextBlock>
+      </StatusBarItem>
+
+      <Separator/>
 
       <StatusBarItem>
         <StackPanel Orientation="Horizontal">
