Added tooltip to status bar for better readability of long status texts

--- a/Last.fm-Scrubbler-WPF/Views/MainView.xaml
+++ b/Last.fm-Scrubbler-WPF/Views/MainView.xaml
@@ -48,7 +48,11 @@
       <StatusBarItem>
         <StackPanel Orientation="Horizontal">
           <Label Content="Current Status:" FontWeight="Bold"/>
-          <Label Content="{Binding CurrentStatus}"/>
+          <Label Content="{Binding CurrentStatus}">
+            <Label.ToolTip>
+              <ToolTip Content="{Binding CurrentStatus}"/>
+            </Label.ToolTip>
+          </Label>
         </StackPanel>
       </StatusBarItem>
     </StatusBar>
