--- a/Last.fm-Scrubbler-WPF/Views/UserView.xaml
+++ b/Last.fm-Scrubbler-WPF/Views/UserView.xaml
@@ -3,6 +3,7 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+        xmlns:models="clr-namespace:Scrubbler.Models"
         mc:Ignorable="d"
         Title="Select user" Height="300" Width="300" Icon="..\scrubbler_64.ico">
 
@@ -46,9 +47,10 @@
     <TextBlock Grid.Row="1" Grid.Column="1" Text="Active User:" FontWeight="Bold"/>
     <TextBlock Grid.Row="1" Grid.Column="3">
       <TextBlock.Text>
-        <MultiBinding StringFormat="{}{0} ({1})">
+        <MultiBinding StringFormat="{}{0} ({1} / {2})">
           <Binding Path="Username" TargetNullValue='No active user'/>
           <Binding Path="RecentScrobbleCount" FallbackValue="0"/>
+          <Binding Source="{x:Static models:User.MAXSCROBBLESPERDAY}"/>
         </MultiBinding>
       </TextBlock.Text>
     </TextBlock>
