--- a/Last.fm-Scrubbler-WPF/Views/ExtraFunctions/PasteYourTasteView.xaml
+++ b/Last.fm-Scrubbler-WPF/Views/ExtraFunctions/PasteYourTasteView.xaml
@@ -54,7 +54,17 @@
 
     <CheckBox Grid.Row="0" Grid.Column="12" Content="Add Profile Link" VerticalAlignment="Center" IsChecked="{Binding AddProfileLink}"/>
 
-    <Button x:Name="GetTopArtists" Grid.Row="0" Grid.Column="14" IsEnabled="{Binding CanFetch}" Content="Fetch"/>
+    <Button x:Name="GetTopArtists" Grid.Row="0" Grid.Column="14" Content="Fetch">
+      <Button.Style>
+        <Style TargetType="Button">
+          <Style.Triggers>
+            <DataTrigger Binding="{Binding Username, TargetNullValue=''}" Value="">
+              <Setter Property="IsEnabled" Value="False"/>
+            </DataTrigger>
+          </Style.Triggers>
+        </Style>
+      </Button.Style>
+    </Button>
 
     <Grid Grid.Row="2" Grid.Column="0" Grid.ColumnSpan="15">
       <Grid.RowDefinitions>
@@ -68,7 +78,16 @@
       </Grid.ColumnDefinitions>
 
       <TextBox Grid.Row="0" Grid.RowSpan="2" Grid.Column="0" IsReadOnly="True" Text="{Binding TasteText, Mode=OneWay}" TextWrapping="Wrap" VerticalScrollBarVisibility="Auto"/>
-      <Button x:Name="CopyTasteText" Grid.Row="0" Grid.Column="2" IsEnabled="{Binding CanCopy}">
+      <Button x:Name="CopyTasteText" Grid.Row="0" Grid.Column="2">
+        <Button.Style>
+          <Style TargetType="Button">
+            <Style.Triggers>
+              <DataTrigger Binding="{Binding TasteText, TargetNullValue=''}" Value="">
+                <Setter Property="IsEnabled" Value="False"/>
+              </DataTrigger>
+            </Style.Triggers>
+          </Style>
+        </Button.Style>
         <Image Source="..\..\Resources\copy.png"/>
         <Button.ToolTip>
           <ToolTip>Copies the text to the clipboard.</ToolTip>
