--- a/Last.fm-Scrubbler-WPF/Views/ScrobbleViews/DatabaseScrobbleView.xaml
+++ b/Last.fm-Scrubbler-WPF/Views/ScrobbleViews/DatabaseScrobbleView.xaml
@@ -66,7 +66,17 @@
     <Label Grid.Row="0" Grid.Column="8" Content="Max Results:"/>
     <xctk:IntegerUpDown Grid.Row="0" Grid.Column="10" Minimum="1" Maximum="1000" Value="{Binding MaxResults}"/>
 
-    <Button x:Name="Search" Grid.Row="0" Grid.Column="12" Content="Search" IsEnabled="{Binding CanSearch}"/>
+    <Button x:Name="Search" Grid.Row="0" Grid.Column="12" Content="Search">
+      <Button.Style>
+        <Style TargetType="Button">
+          <Style.Triggers>
+            <DataTrigger Binding="{Binding SearchText, TargetNullValue=''}" Value="">
+              <Setter Property="IsEnabled" Value="False"/>
+            </DataTrigger>
+          </Style.Triggers>
+        </Style>
+      </Button.Style>
+    </Button>
 
     <ContentPresenter Grid.Row="2" Grid.Column="0" Grid.ColumnSpan="14" Content="{Binding CurrentView}"/>
 
